# ChangeLog for dev-libs/libisofs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisofs/ChangeLog,v 1.47 2009/11/30 18:39:03 ranger Exp $

  30 Nov 2009; Brent Baude <ranger@gentoo.org> libisofs-0.6.20-r1.ebuild:
  Marking libisofs-0.6.20-r1 ppc64 for bug 282658

  26 Nov 2009; Markus Meier <maekke@gentoo.org> libisofs-0.6.24.ebuild:
  amd64 stable, bug #287526

  24 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  libisofs-0.6.24.ebuild:
  stable x86, bug 287526

  24 Nov 2009; Tobias Klausmann <klausman@gentoo.org>
  libisofs-0.6.24.ebuild:
  Stable on alpha, bug #287526

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> libisofs-0.6.20-r1.ebuild:
  Stable for HPPA (bug #282658).

*libisofs-0.6.24 (08 Oct 2009)

  08 Oct 2009; Pielmeier Daniel <billie@gentoo.org> +libisofs-0.6.24.ebuild:
  Version bump.

  28 Sep 2009; Olivier Crête <tester@gentoo.org> libisofs-0.6.20-r1.ebuild:
  amd64 stable, bug #282658

  27 Sep 2009; nixnut <nixnut@gentoo.org> libisofs-0.6.20-r1.ebuild:
  ppc stable #282658

  12 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  libisofs-0.6.20-r1.ebuild:
  stable x86, bug 282658

*libisofs-0.6.22 (02 Sep 2009)

  02 Sep 2009; Pielmeier Daniel <billie@gentoo.org> +libisofs-0.6.22.ebuild:
  Version bump.

  30 Aug 2009; Tobias Klausmann <klausman@gentoo.org>
  libisofs-0.6.20-r1.ebuild:
  Stable on alpha, bug #282658

  09 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  libisofs-0.6.20-r1.ebuild:
  Remove extra acl and xattr deps wrt #276574, thanks to Darren Smith for
  reporting.

*libisofs-0.6.20-r1 (04 Jul 2009)

  04 Jul 2009; Pielmeier Daniel <billie@gentoo.org> -libisofs-0.6.8.ebuild,
  -libisofs-0.6.14.ebuild, -libisofs-0.6.16.ebuild,
  -libisofs-0.6.16-r1.ebuild, -libisofs-0.6.18.ebuild,
  +libisofs-0.6.20-r1.ebuild:
  Revision bump. Add some overdue use flags. Remove old.

  22 Jun 2009; Jeroen Roovers <jer@gentoo.org> libisofs-0.6.18.ebuild,